--- a/Cargo.toml
+++ b/Cargo.toml
@@ -30,7 +30,7 @@ near = []
 rlp = "0.6.1"
 hex = "0.4.3"
 borsh = { version = "1.0.0", features = ["derive"] }
-near-sdk = { version = "5.3.0", features = ["schemars", "non-contract-usage"] }
+near-sdk = { version = "5.15.1", features = ["schemars", "non-contract-usage"] }
 near-account-id = { version = "1.1.1", features = ["schemars-stable"] }
 serde-big-array = "0.5.1"
 bs58 = "0.5.1"
@@ -49,7 +49,7 @@ alloy-primitives = { version = "0.8.3" }
 # near
 near-primitives = { version = "0.30" }
 near-crypto = { version = "0.30" }
-near-jsonrpc-client = { version = "0.17.0" }
+near-jsonrpc-client = { version = "0.17.0", features = ["any"] }
 near-workspaces = { version = "0.20", features = ["experimental", "unstable"] }
 
 # bitcoin
@@ -71,6 +71,7 @@ k256 = { version = "0.13.1", features = [
 
 # async
 tokio = { version = "1.38", features = ["full"] }
+openssl = { version = "0.10.56", features = ["vendored"] }
 
 # misc
 eyre = "0.6"
